# d1

./: .gitignore  pyproject.toml
SFT/: sft_train.py  sft_trainer.py
diffu-grpo/: diffu_grpo_config.py  diffu_grpo_train.py  diffu_grpo_trainer.py  math500_utils.py  reward_func.py  run.sh
eval/: countdown.py  eval.py  generate.py  gsm8k.py  math500.py  parse_and_get_acc.py  parser_helper.py  parser_json.py  parsers.py  sudoku.py
